--- a/rota.html
+++ b/rota.html
@@ -10,20 +10,33 @@
     body {
       font-family: Arial, sans-serif;
       background: url('Rotadeonibus.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background-size: contain; /* Ajusta a imagem inteira, sem cortar */
+      background-color: #000; /* cor de fundo se houver espaço */
       min-height: 100vh;
       color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       padding: 20px;
+      position: relative;
+    }
+
+    /* Camada escura sobre a imagem para contraste */
+    body::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.4); /* semi-transparente leve */
+      z-index: 0;
     }
 
     .container {
+      position: relative;
+      z-index: 1;
       background: rgba(0, 0, 0, 0.6); /* fundo semi-transparente */
-      padding: 30px;
+      padding: 35px;
       border-radius: 15px;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.6);
       width: 100%;
       max-width: 600px;
       text-align: center;
@@ -33,7 +46,7 @@
     h1 {
       font-size: 28px;
       margin-bottom: 25px;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
     }
 
     .form-group {
