--- a/rastreabilidade.html
+++ b/rastreabilidade.html
@@ -4,60 +4,28 @@
 <meta charset="UTF-8">
 <title>Rastreabilidade de Frota</title>
 <style>
-body { margin:0; font-family:Arial,sans-serif;
-  background: url('rastreabilidade-bg.jpg') no-repeat center center fixed;
-  background-size: cover; color:#fff;
-}
-body::before { content:""; position:fixed; top:0; left:0; right:0; bottom:0;
-  background: rgba(0,0,0,0.3); z-index:-1; }
-header { text-align:center; padding:30px;}
-header h1 { margin:0; font-size:28px; text-shadow:1px 1px 4px #000; }
-section { max-width:900px; margin:20px auto; padding:20px; border-radius:8px; background: rgba(255,255,255,0.9); color:#333; }
-#map { width:100%; height:400px; background:#ccc; display:flex; align-items:center; justify-content:center; margin-bottom:10px; font-size:24px; font-weight:bold; text-align:center;}
-select, button { padding:8px; margin:5px 0; border-radius:6px; border:none; }
-select { width:200px; }
-button { background:#2e86c1; color:white; cursor:pointer; }
-button:hover { background:#1b4f72; }
+body { margin:0; font-family:Arial,sans-serif; }
+header { text-align:center; padding:20px; background:#2e86c1; color:white; }
+header h1 { margin:0; font-size:28px; }
+.map-container { width:100%; height:80vh; }
 .duvidas-ajuda { position:fixed; bottom:30px; right:30px; display:flex; flex-direction:column; gap:10px; }
 .duvidas-ajuda button { padding:10px 15px; border-radius:6px; border:none; background:#28b463; color:white; cursor:pointer; }
+section { padding:20px; }
 </style>
 </head>
 <body>
 
 <header>
 <h1>Rastreabilidade de Frota</h1>
-<p>Visualize a trajetória dos ônibus</p>
+<p>Visualize a frota no Estado de São Paulo</p>
 </header>
 
-<section>
-<label>Linha:</label>
-<select id="linha">
-  <option value="">--Selecione--</option>
-  <option value="101">Linha 101</option>
-  <option value="102">Linha 102</option>
-  <option value="103">Linha 103</option>
-</select>
-
-<label>Rota:</label>
-<select id="rota">
-  <option value="">--Selecione--</option>
-  <option value="A">Rota A</option>
-  <option value="B">Rota B</option>
-  <option value="C">Rota C</option>
-</select>
-
-<label>Ônibus:</label>
-<select id="onibus">
-  <option value="">--Selecione--</option>
-  <option value="1">Ônibus 1</option>
-  <option value="2">Ônibus 2</option>
-  <option value="3">Ônibus 3</option>
-</select>
-
-<button onclick="atualizarMapa()">Mostrar Trajetória</button>
-
-<div id="map">Mapa vazio</div>
-</section>
+<div class="map-container">
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m12!1m3!1d14631298.233263305!2d-53.163196!3d-22.080349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9481fa7c0c8c5f8d%3A0x2f76b7e5f0fce0!2sEstado%20de%20S%C3%A3o%20Paulo!5e0!3m2!1spt-BR!2sbr!4v1696250000000!5m2!1spt-BR!2sbr"
+    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy">
+  </iframe>
+</div>
 
 <div class="duvidas-ajuda">
   <button onclick="scrollPara('duvidas')">Dúvidas</button>
@@ -75,30 +43,6 @@ button:hover { background:#1b4f72; }
 </section>
 
 <script>
-// Trajetórias simuladas
-const trajetorias = {
-  "101": "Linha 101: Terminal A → Rua 1 → Rua 2 → Terminal B",
-  "102": "Linha 102: Terminal C → Rua 3 → Rua 4 → Terminal D",
-  "103": "Linha 103: Terminal E → Rua 5 → Rua 6 → Terminal F"
-};
-
-function atualizarMapa() {
-  const linha = document.getElementById('linha').value;
-  const rota = document.getElementById('rota').value;
-  const onibus = document.getElementById('onibus').value;
-  const mapa = document.getElementById('map');
-
-  if(linha === "") {
-    mapa.innerHTML = "Selecione uma linha para visualizar";
-    return;
-  }
-
-  let texto = trajetorias[linha] || "Trajetória não disponível";
-  if(rota) texto += `<br>Rota selecionada: ${rota}`;
-  if(onibus) texto += `<br>Ônibus selecionado: ${onibus}`;
-  mapa.innerHTML = texto;
-}
-
 function scrollPara(id){ document.getElementById(id).scrollIntoView({behavior:'smooth'}); }
 </script>
 
